--- a/Tris/Html/Index.html
+++ b/Tris/Html/Index.html
@@ -16,7 +16,7 @@
     </div>
     <table>
         <tr>
-            <td><button onclick="makeMove(this)"></button></td>
+            <td class="bt"><button onclick="makeMove(this)"></button></td>
             <td><button onclick="makeMove(this)"></button></td>
             <td><button onclick="makeMove(this)"></button></td>
         </tr>
