--- a/Esercizio2/Index.html
+++ b/Esercizio2/Index.html
@@ -8,8 +8,8 @@
 
 </head>
 <body>
-    <div>
-    <table class="no-margin">
+    <div style="background-color: white;">
+    <table>
         <tr>
             <td><img src="img/top.jpg" alt="Top Image"></td>
         </tr>
