--- a/lezione2Bootstrap/es2.html
+++ b/lezione2Bootstrap/es2.html
@@ -14,6 +14,7 @@
                 <img src="img/top.jpg">
             </div>
         </div>
+
         <div class="row">
             <div class="col-xl">
                  <a href="">Home</a>    
@@ -32,7 +33,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-3 border">
+            <div class="col-xl-3">
                 <div class="row">
                     <div class="col-xl">
                         <a href=""><img src="img/registrati-ora.jpg"></a>
@@ -49,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-9">
+            <div class="col-xxl-12 col-md-2">
                 <div class="row">
                     <div class="col-xl">
                         <a href=""><img src="img/libro1.jpg"></a>
