--- a/lezione2Bootstrap/es2.html
+++ b/lezione2Bootstrap/es2.html
@@ -9,60 +9,64 @@
 </head>
   <body>
     <div class="container" >
-        <div class="row ">
-            <div class="col-xxl justify-content-center align-items-center">
-                <img src="img/top.jpg">
+        <div class="row d-flex justify-content-center align-items-center ">
+            <div class="col d-flex justify-content-center align-items-centerr">
+                <img src="img/top.jpg" style="width: 1319px;height: 190px;">
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-xl">
-                 <a href="">Home</a>    
-            </div>
-            <div class="col-xl">
-                | <a href="">La nostra azienda</a> 
-            </div>
-            <div class="col-xl">
-                | <a href="">Prodotti</a>
-            </div>
-            <div class="col-xl">
-                | | <a href="">I servizi</a> 
-            </div>
-            <div class="col-xl">
-                | <a href="">Contatti</a>
+        <div class="row d-flex justify-content-center align-items-center" style="background-color: rgb(65, 65, 65)";>
+            <div class="col-auto ">
+                <div class="row">
+                    <div class="col-auto">
+                        <a href="">| Home</a>    
+                    </div>
+                    <div class="col-auto">
+                        <a href="">| La nostra azienda |</a> 
+                    </div>
+                    <div class="col-auto">
+                        <a href="">| Prodotti |</a>
+                    </div>
+                    <div class="col-auto">
+                        <a href="">| I servizi |</a> 
+                    </div>
+                    <div class="col-auto">
+                        <a href="">| Contatti |</a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-xl-3">
+            <div class="col-auto">
                 <div class="row">
-                    <div class="col-xl">
+                    <div class="col-auto">
                         <a href=""><img src="img/registrati-ora.jpg"></a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl">
+                    <div class="col-auto">
                         <a href=""><img src="img/login.jpg"></a>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl">
+                    <div class="col-auto">
                         <a href=""><img src="img/catalogo.jpg"></a>
                     </div>
                 </div>
             </div>
-            <div class="col-xxl-12 col-md-2">
+            <div class="col-auto">
                 <div class="row">
-                    <div class="col-xl">
+                    <div class=" col-auto">
                         <a href=""><img src="img/libro1.jpg"></a>
                     </div>
-                    <div class="col-xl">
+                    <div class="col-auto">
                         <div class="row">
-                            <div class="col-xl">
+                            <div class="col-auto">
                                 autore
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xl">
+                            <div class="col-auto">
                                 scrittore
                             </div>
                         </div>
