--- a/Lezione9/News.html
+++ b/Lezione9/News.html
@@ -39,7 +39,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 text-center">
-                   <h1 id="n2"></h1>
+                <div id="lista"></div>
+                <div id="dettagli"></div>
+                   
             </div>
         </div>
     </div>
