--- a/Lezione9/Utenti.html
+++ b/Lezione9/Utenti.html
@@ -39,13 +39,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 text-center">
-                   <h1 id="u2"></h1>
+                <div id="lista"></div>
+                <div id="dettagli"></div>
             </div>
         </div>
     </div>
 
     <!-- Bootstrap Script -->
-    <script src="Esercizio9.js"></script>
+    <script src="utenti.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
