--- a/Lezione9/Album.html
+++ b/Lezione9/Album.html
@@ -38,18 +38,26 @@
         </div>
     </nav>
 
-    <!-- Contenuto principale -->
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 text-center">
-                <div id="lista"></div>
-                <div id="dettagli"></div>
+                <div class="container mt-4">
+                    <label for="utenteSelect" class="form-label">Seleziona un utente:</label>
+                    <select id="utenteSelect" class="form-select mb-3">
+                        <option value="0" selected>Seleziona un utente...</option>
+                    </select>
+                    <button id="visualizzaBtn" class="btn btn-primary">Visualizza Album</button>
+                </div>
+                
+               
+                <div id="newsContainer" class="mt-4"></div>
             </div>
         </div>
     </div>
 
     <!-- Bootstrap Script -->
-    <script src="utenti.js"></script>
+    <script src="Album.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
