--- a/Lezione9/Index.html
+++ b/Lezione9/Index.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="News.html">News</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Album.html">Album</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca" aria-label="Search">
